addition of event data to the ipywidget debugging tool

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 25,
    "id": "b69354cd",
    "metadata": {
     "ExecuteTime": {
@@ -9,16 +10,16 @@
      "start_time": "2024-09-25T04:34:44.358189Z"
     }
    },
+   "outputs": [],
    "source": [
     "import SeasonData as sdata\n",
     "import pandas as pd\n",
     "import ipywidgets"
-   ],
-   "outputs": [],
-   "execution_count": 25
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
    "id": "f6156ea3",
    "metadata": {
     "ExecuteTime": {
@@ -26,12 +27,6 @@
      "start_time": "2024-09-25T04:34:44.415851Z"
     }
    },
-   "source": [
-    "# Generating play-by-play data for year 2022\n",
-    "data = sdata.NHLData()  # Object creation\n",
-    "data.fetch_regular_season(year=2022)  # Fetching data\n",
-    "data_rs = data.regular_season  # Get data in variable"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -41,10 +36,16 @@
      ]
     }
    ],
-   "execution_count": 26
+   "source": [
+    "# Generating play-by-play data for year 2022\n",
+    "data = sdata.NHLData()  # Object creation\n",
+    "data.fetch_regular_season(year=2022)  # Fetching data\n",
+    "data_rs = data.regular_season  # Get data in variable"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
    "id": "e69d27b9",
    "metadata": {
     "ExecuteTime": {
@@ -52,6 +53,7 @@
      "start_time": "2024-09-25T04:34:47.845423Z"
     }
    },
+   "outputs": [],
    "source": [
     "def minutes_to_seconds(df: pd.DataFrame, column: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -71,12 +73,11 @@
     "    df.drop(['minutes', 'seconds'], axis=1, inplace=True)\n",
     "\n",
     "    return df"
-   ],
-   "outputs": [],
-   "execution_count": 27
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
    "id": "81c660ac",
    "metadata": {
     "ExecuteTime": {
@@ -84,6 +85,7 @@
      "start_time": "2024-09-25T04:34:47.889509Z"
     }
    },
+   "outputs": [],
    "source": [
     "def convert_event_to_dataframe(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -186,12 +188,11 @@
     "    # Get split information 0 | 65 | 1\n",
     "\n",
     "    return new_df"
-   ],
-   "outputs": [],
-   "execution_count": 28
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
    "id": "645e6acc",
    "metadata": {
     "ExecuteTime": {
@@ -199,16 +200,6 @@
      "start_time": "2024-09-25T04:34:47.950274Z"
     }
    },
-   "source": [
-    "# Test on one game (avoid to test on all data)\n",
-    "\n",
-    "new_data = sdata.NHLData()\n",
-    "new_data.fetch_regular_season(year=2022)\n",
-    "data_2022 = data.regular_season['2022']\n",
-    "game_one_2022 = data_2022[0]\n",
-    "df_game_one_2022 = convert_event_to_dataframe(game_one_2022)\n",
-    "df_game_one_2022.head()\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -219,28 +210,6 @@
     },
     {
      "data": {
-      "text/plain": [
-       "       idGame periodType currentPeriod              timeInPeriod  \\\n",
-       "0  2022020001        REG           1/3 2022-10-07 18:00:23+00:00   \n",
-       "1  2022020001        REG           1/3 2022-10-07 18:00:59+00:00   \n",
-       "2  2022020001        REG           1/3 2022-10-07 18:01:01+00:00   \n",
-       "3  2022020001        REG           1/3 2022-10-07 18:01:12+00:00   \n",
-       "4  2022020001        REG           1/3 2022-10-07 18:02:42+00:00   \n",
-       "\n",
-       "  situationCode eventOwnerTeam   typeDescKey    iceCoord   shootingPlayer  \\\n",
-       "0          1551      Predators  shot-on-goal   (-75, 32)    Ryan McDonagh   \n",
-       "1          1551      Predators  shot-on-goal  (-52, -14)       Roman Josi   \n",
-       "2          1551      Predators          goal    (45, 10)       Roman Josi   \n",
-       "3          1551      Predators  shot-on-goal     (80, 0)       Roman Josi   \n",
-       "4          1551      Predators  shot-on-goal   (28, -11)  Mark Borowiecki   \n",
-       "\n",
-       "   goaliePlayer shotType teamSide  \n",
-       "0  James Reimer    wrist     home  \n",
-       "1  James Reimer    wrist     home  \n",
-       "2  James Reimer    wrist     home  \n",
-       "3  James Reimer   tip-in     home  \n",
-       "4  James Reimer    wrist     home  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -353,6 +322,28 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "       idGame periodType currentPeriod              timeInPeriod  \\\n",
+       "0  2022020001        REG           1/3 2022-10-07 18:00:23+00:00   \n",
+       "1  2022020001        REG           1/3 2022-10-07 18:00:59+00:00   \n",
+       "2  2022020001        REG           1/3 2022-10-07 18:01:01+00:00   \n",
+       "3  2022020001        REG           1/3 2022-10-07 18:01:12+00:00   \n",
+       "4  2022020001        REG           1/3 2022-10-07 18:02:42+00:00   \n",
+       "\n",
+       "  situationCode eventOwnerTeam   typeDescKey    iceCoord   shootingPlayer  \\\n",
+       "0          1551      Predators  shot-on-goal   (-75, 32)    Ryan McDonagh   \n",
+       "1          1551      Predators  shot-on-goal  (-52, -14)       Roman Josi   \n",
+       "2          1551      Predators          goal    (45, 10)       Roman Josi   \n",
+       "3          1551      Predators  shot-on-goal     (80, 0)       Roman Josi   \n",
+       "4          1551      Predators  shot-on-goal   (28, -11)  Mark Borowiecki   \n",
+       "\n",
+       "   goaliePlayer shotType teamSide  \n",
+       "0  James Reimer    wrist     home  \n",
+       "1  James Reimer    wrist     home  \n",
+       "2  James Reimer    wrist     home  \n",
+       "3  James Reimer   tip-in     home  \n",
+       "4  James Reimer    wrist     home  "
       ]
      },
      "execution_count": 29,
@@ -360,10 +351,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "source": [
+    "# Test on one game (avoid to test on all data)\n",
+    "\n",
+    "new_data = sdata.NHLData()\n",
+    "new_data.fetch_regular_season(year=2022)\n",
+    "data_2022 = data.regular_season['2022']\n",
+    "game_one_2022 = data_2022[0]\n",
+    "df_game_one_2022 = convert_event_to_dataframe(game_one_2022)\n",
+    "df_game_one_2022.head()\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
    "id": "13335ef4",
    "metadata": {
     "ExecuteTime": {
@@ -371,6 +372,18 @@
      "start_time": "2024-09-25T04:34:51.794095Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n#Loop on all years in regular season\\nfor year in data_rs:\\n    current_year = data_rs[year]  #Get year\\n    sdata_year = len(current_year)  #Get the number of games in the year\\n\\n    #Loop on all game in the year\\n    for game in range(sdata_year):\\n        current_year[game] = convert_event_to_dataframe(game_nhl=current_year[game])  #Processing game data\\n\\ndata_rs['2022'][0].head()\\n\""
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test on all regular season\n",
     "\"\"\"\n",
@@ -385,23 +398,11 @@
     "\n",
     "data_rs['2022'][0].head()\n",
     "\"\"\""
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#Loop on all years in regular season\\nfor year in data_rs:\\n    current_year = data_rs[year]  #Get year\\n    sdata_year = len(current_year)  #Get the number of games in the year\\n\\n    #Loop on all game in the year\\n    for game in range(sdata_year):\\n        current_year[game] = convert_event_to_dataframe(game_nhl=current_year[game])  #Processing game data\\n\\ndata_rs['2022'][0].head()\\n\""
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 30
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
    "id": "0214bb32",
    "metadata": {
     "ExecuteTime": {
@@ -409,23 +410,6 @@
      "start_time": "2024-09-25T04:34:51.899171Z"
     }
    },
-   "source": [
-    "# Fetching teams abbreviation\n",
-    "print('game id')\n",
-    "print(data.regular_season['2022'][0]['id'])\n",
-    "print('away team abbrev')\n",
-    "print(data.regular_season['2022'][0]['awayTeam']['abbrev'])\n",
-    "print('home team abbrev')\n",
-    "print(data.regular_season['2022'][0]['homeTeam']['abbrev'])\n",
-    "print('away team score')\n",
-    "print(data.regular_season['2022'][0]['awayTeam']['score'])\n",
-    "print('home team score')\n",
-    "print(data.regular_season['2022'][0]['homeTeam']['score'])\n",
-    "print('away team shoot on goal')\n",
-    "print(data.regular_season['2022'][0]['awayTeam']['sog'])\n",
-    "print('home team shoot on goal')\n",
-    "print(data.regular_season['2022'][0]['homeTeam']['sog'])\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -448,10 +432,27 @@
      ]
     }
    ],
-   "execution_count": 31
+   "source": [
+    "# Fetching teams abbreviation\n",
+    "print('game id')\n",
+    "print(data.regular_season['2022'][0]['id'])\n",
+    "print('away team abbrev')\n",
+    "print(data.regular_season['2022'][0]['awayTeam']['abbrev'])\n",
+    "print('home team abbrev')\n",
+    "print(data.regular_season['2022'][0]['homeTeam']['abbrev'])\n",
+    "print('away team score')\n",
+    "print(data.regular_season['2022'][0]['awayTeam']['score'])\n",
+    "print('home team score')\n",
+    "print(data.regular_season['2022'][0]['homeTeam']['score'])\n",
+    "print('away team shoot on goal')\n",
+    "print(data.regular_season['2022'][0]['awayTeam']['sog'])\n",
+    "print('home team shoot on goal')\n",
+    "print(data.regular_season['2022'][0]['homeTeam']['sog'])\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
    "id": "6121709a",
    "metadata": {
     "ExecuteTime": {
@@ -459,6 +460,39 @@
      "start_time": "2024-09-25T04:34:52.009411Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data imported: 0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dff31fca86c04c4c8e0caff31de5abfe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=656, description='game_number', max=1312, min=1), Output()), _dom_classe…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_game(game_number)>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we assume it is a regular season\n",
     "\n",
@@ -488,41 +522,7 @@
     "\n",
     "\n",
     "ipywidgets.interact(plot_game, game_number=(1, len(rs_data.regular_season[season]), 1))"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data imported: 0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "interactive(children=(IntSlider(value=656, description='game_number', max=1312, min=1), Output()), _dom_classe…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "dff31fca86c04c4c8e0caff31de5abfe"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.plot_game(game_number)>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 32
+   ]
   }
  ],
  "metadata": {
