Nouvelle colonne : savoir si l'équipe était en avantage numérique ou non.

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "code",
    "source": [
     "import SeasonData as sdata\n",
-    "import pandas as pd\n",
-    "import ipywidgets"
+    "import pandas as pd"
    ],
    "id": "8d67a944574fc258",
    "outputs": [],
@@ -40,10 +39,10 @@
     "    df['minutes'] = df[column].str.split(':').str[0].astype(int)\n",
     "    df['seconds'] = df[column].str.split(':').str[1].astype(int)\n",
     "    df['numberPeriod'] = df['currentPeriod'].str.split(\"/\").str[0].astype(int)\n",
-    "    \n",
+    "\n",
     "    # Total in seconds\n",
-    "    df[column] = df['minutes'] * 60 + df['seconds'] + 20*60*(df['numberPeriod']-1)\n",
-    "        \n",
+    "    df[column] = df['minutes'] * 60 + df['seconds'] + 20 * 60 * (df['numberPeriod'] - 1)\n",
+    "\n",
     "    #Drop columns\n",
     "    df.drop(['minutes', 'seconds', 'numberPeriod'], axis=1, inplace=True)\n",
     "\n",
@@ -93,7 +92,7 @@
     "    # Filter to keep only events of type 'shot-on-goal' or 'goal'\n",
     "    new_df = new_df[(new_df['typeDescKey'] == 'shot-on-goal') | (new_df['typeDescKey'] == 'goal')].reset_index(\n",
     "        drop=True)\n",
-    "    \n",
+    "\n",
     "    # Decompose the period descriptor fields\n",
     "    df_period = pd.DataFrame(new_df['periodDescriptor'].tolist())\n",
     "    new_df.drop('periodDescriptor', axis=1, inplace=True)\n",
@@ -104,45 +103,44 @@
     "    # Add 'periodType' and 'currentPeriod' columns to the new dataframe\n",
     "    new_df.insert(1, 'periodType', df_period['periodType'])\n",
     "    new_df.insert(2, 'currentPeriod', df_period['number'] + '/' + df_period['maxRegulationPeriods'])\n",
-    "    \n",
+    "\n",
     "    # Convert time in the period to seconds and add it to the game start time\n",
     "    new_df = minutes_to_seconds(new_df, 'timeInPeriod')\n",
     "    new_df['timeInPeriod'] = start_time + pd.to_timedelta(new_df['timeInPeriod'], unit='s')\n",
-    "    \n",
+    "\n",
     "    # Decompose the details fields\n",
     "    df_details = pd.DataFrame(new_df['details'].tolist())\n",
     "    new_df.drop('details', axis=1, inplace=True)\n",
-    "    \n",
+    "\n",
     "    # Combine the x and y coordinates into a tuple\n",
     "    df_details['iceCoord'] = df_details[['xCoord', 'yCoord']].apply(tuple, axis=1)\n",
-    "    \n",
+    "\n",
     "    # Merge 'shooting' and 'scoring' player, to keep only one column\n",
     "    df_details['shootingPlayerId'] = df_details['shootingPlayerId'].fillna(0) + df_details['scoringPlayerId'].fillna(0)\n",
     "\n",
     "    # Convert 'shootingPlayerId' and 'goalieInNetId' as integer\n",
     "    df_details['shootingPlayerId'] = df_details['shootingPlayerId'].astype(int)\n",
     "    df_details['goalieInNetId'] = df_details['goalieInNetId'].astype('Int64')  # Int64: handling NaN values\n",
-    "    \n",
+    "\n",
     "    # Add the shooter names by merging IDs\n",
     "    df_details = pd.merge(df_players, df_details, left_on='playerId', right_on='shootingPlayerId', how='right').drop(\n",
     "        columns=['playerId'])\n",
-    "    \n",
+    "\n",
     "    # Keep only full name\n",
     "    df_details['shootingPlayer'] = df_details['firstName'] + ' ' + df_details['lastName']\n",
     "    df_details.drop(['firstName', 'lastName'], axis=1, inplace=True)\n",
-    "    \n",
+    "\n",
     "    # Add the goalies names by merging IDs \n",
-    "    df_details = pd.merge(df_players, df_details, left_on='playerId', right_on='goalieInNetId', how='right').drop( \n",
-    "        columns=['playerId']) # 'right' to keep the Nan values\n",
-    "    \n",
+    "    df_details = pd.merge(df_players, df_details, left_on='playerId', right_on='goalieInNetId', how='right').drop(\n",
+    "        columns=['playerId'])  # 'right' to keep the Nan values\n",
+    "\n",
     "    # Keep only full name\n",
     "    df_details['goaliePlayer'] = df_details['firstName'] + ' ' + df_details['lastName']\n",
     "    df_details.drop(['firstName', 'lastName'], axis=1, inplace=True)\n",
     "\n",
     "    # Add team data by merging IDs\n",
     "    df_details = pd.merge(df_team, df_details, left_on='teamId', right_on='eventOwnerTeamId', how='right')\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Add the extracted data to the new dataframe\n",
     "    new_df['iceCoord'] = df_details['iceCoord']\n",
     "    new_df['shootingPlayer'] = df_details['shootingPlayer']\n",
@@ -150,15 +148,22 @@
     "    new_df['shotType'] = df_details['shotType']\n",
     "    new_df.insert(5, 'eventOwnerTeam', df_details['teamName'])\n",
     "    new_df['teamSide'] = df_details['teamSide']\n",
-    "    \n",
-    "    # \n",
-    "    new_df['emptyGoalNet'] = new_df.apply(\n",
-    "        lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map({'0': True, '1': False})\n",
     "\n",
-    "    # TODO: advantage / disadvantage\n",
-    "    # Get split information 0 | 65 | 1\n",
-    "    \n",
-    "    return new_df  "
+    "    # Check if the goal is empty based on the situation code and team side\n",
+    "    new_df['emptyGoalNet'] = new_df.apply(\n",
+    "        lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map(\n",
+    "        {'0': True, '1': False})\n",
+    "\n",
+    "    #  Determine if the event team is in advantage, disadvantage, or neutral situation\n",
+    "    new_df['isGoalAdvantage'] = new_df.apply(\n",
+    "        lambda x: \"Advantage\" if (int(x['situationCode'][1]) > int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
+    "                                 or (int(x['situationCode'][2]) > int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
+    "        else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
+    "                               or (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
+    "        else 'Neutral'\n",
+    "        , axis=1)\n",
+    "\n",
+    "    return new_df"
    ],
    "id": "c565e702e4d717db",
    "outputs": [],
