- ajout de la patinoire dans la visualisation de l'outil de debogage - permettre le choix du type de match (regular ou playoff) et de la saison

--- a/NHL_debugging_tool.ipynb
+++ b/NHL_debugging_tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b69354cd",
    "metadata": {},
    "outputs": [],
@@ -10,25 +10,78 @@
     "import SeasonData as sdata\n",
     "import pandas as pd\n",
     "import ipywidgets\n",
-    "import pprint"
+    "import pprint\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "41923042",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data imported: 1312\n",
+      "Data imported: 89\n",
+      "Data imported: 1312\n",
+      "Data imported: 88\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d99ef7422f9489e91961b4a0f5a843f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='game_type', options=('regular', 'playoff'), value='regular'), Drop…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_nhl_data(game_type, season=2022)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# we assume it is a regular season\n",
+    "nhl_data_provider = sdata.NHLData()\n",
+    "season_list = [2021,2022]\n",
     "\n",
-    "season = '2022'\n",
-    "rs_data = sdata.NHLData()\n",
-    "rs_data.fetch_regular_season(year = season)\n",
-    "game_count = len(rs_data.regular_season[season])\n",
+    "# on charge les données au préalable\n",
+    "for season in season_list:\n",
+    "    nhl_data_provider.fetch_regular_season(year = str(season))\n",
+    "    nhl_data_provider.fetch_playoffs(year = str(season))\n",
+    "    \n",
     "\n",
-    "def plot_game(game_number):    \n",
-    "    game_data = rs_data.regular_season['2022'][game_number-1]\n",
+    "def plot_nhl_data(game_type, season=2022):\n",
+    "    season = str(season)\n",
+    "    \n",
+    "    if(game_type == 'regular'):\n",
+    "        #nhl_data_provider.fetch_regular_season(year = season)\n",
+    "        games_data = nhl_data_provider.regular_season[season]\n",
+    "    else:\n",
+    "        #nhl_data_provider.fetch_playoffs(year = season)\n",
+    "        games_data = nhl_data_provider.playoffs[season]\n",
+    "    \n",
+    "    game_count = len(games_data)\n",
+    "    ipywidgets.interact(plot_game, game_number=(1, game_count,1), games_data=ipywidgets.fixed(games_data))\n",
+    "    \n",
+    "\n",
+    "def plot_game(game_number, games_data):    \n",
+    "    game_data = games_data[game_number-1]\n",
     "    \n",
     "    print(game_data['startTimeUTC'])\n",
     "    print(f\"Game ID: {game_number}; {game_data['homeTeam']['abbrev']} (home) vs {game_data['awayTeam']['abbrev']} (away)\")\n",
@@ -47,18 +100,35 @@
     "def plot_game_event(game_data, event_number):\n",
     "    event_data = game_data['plays'][event_number-1]\n",
     "    print(\"infos de l'evenement\")\n",
-    "    pprint.pprint(event_data)\n",
+    "    \n",
+    "    image_path = 'patinoire.png'\n",
+    "    img = mpimg.imread(image_path)\n",
+    "    img_height, img_width = img.shape[0], img.shape[1]\n",
     "\n",
-    "ipywidgets.interact(plot_game, game_number=(1, game_count,1))\n"
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    # Afficher l'image dans le fond\n",
+    "    ax.imshow(img, extent=[-100, 100, -42.5, 42.5], origin='lower')\n",
+    "    # ax.imshow(img, extent=[-img_width/2, img_width/2, -img_height/2, img_height/2], origin='lower')\n",
+    "\n",
+    "    # Positionner les axes x et y aux bords (gauche pour y et bas pour x)\n",
+    "    ax.spines['left'].set_position(('axes', 0))  # Garder l'axe y à gauche\n",
+    "    ax.spines['bottom'].set_position(('axes', 0))  # Garder l'axe x en bas\n",
+    "\n",
+    "    # Masquer les axes du haut et de droite\n",
+    "    ax.spines['right'].set_color('none')\n",
+    "    ax.spines['top'].set_color('none')\n",
+    "    \n",
+    "    if('details' in event_data and 'xCoord' in event_data['details'] and 'yCoord' in event_data['details']):\n",
+    "        ax.scatter(event_data['details']['xCoord'], event_data['details']['yCoord'], color=\"blue\", s=100, zorder=5)\n",
+    "    \n",
+    "    plt.show()\n",
+    "    \n",
+    "    # on affiche les données brute de l'évenement\n",
+    "    pprint.pprint(event_data)  \n",
+    "\n",
+    "ipywidgets.interact(plot_nhl_data, game_type=['regular', 'playoff'], season=season_list)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40f1074d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
