nom des équipe ajoutés a la patinoire pour identifier les camps

--- a/NHL_debugging_tool.ipynb
+++ b/NHL_debugging_tool.ipynb
@@ -30,15 +30,12 @@
     "    nhl_data_provider.fetch_regular_season(year = str(season))\n",
     "    nhl_data_provider.fetch_playoffs(year = str(season))\n",
     "    \n",
-    "\n",
     "def plot_nhl_data(game_type, season=2022):\n",
     "    season = str(season)\n",
     "    \n",
     "    if(game_type == 'regular'):\n",
-    "        #nhl_data_provider.fetch_regular_season(year = season)\n",
     "        games_data = nhl_data_provider.regular_season[season]\n",
     "    else:\n",
-    "        #nhl_data_provider.fetch_playoffs(year = season)\n",
     "        games_data = nhl_data_provider.playoffs[season]\n",
     "    \n",
     "    game_count = len(games_data)\n",
@@ -74,7 +71,6 @@
     "\n",
     "    # Afficher l'image dans le fond\n",
     "    ax.imshow(img, extent=[-100, 100, -42.5, 42.5], origin='lower')\n",
-    "    # ax.imshow(img, extent=[-img_width/2, img_width/2, -img_height/2, img_height/2], origin='lower')\n",
     "\n",
     "    # Positionner les axes x et y aux bords (gauche pour y et bas pour x)\n",
     "    ax.spines['left'].set_position(('axes', 0))  # Garder l'axe y à gauche\n",
@@ -87,10 +83,23 @@
     "    if('details' in event_data and 'xCoord' in event_data['details'] and 'yCoord' in event_data['details']):\n",
     "        ax.scatter(event_data['details']['xCoord'], event_data['details']['yCoord'], color=\"blue\", s=100, zorder=5)\n",
     "    \n",
+    "    y_min, y_max = plt.ylim()\n",
+    "    \n",
+    "    if event_data['homeTeamDefendingSide'] == 'right':\n",
+    "        home_team_position_x = 40\n",
+    "        away_team_position_x = -60\n",
+    "    else:\n",
+    "        home_team_position_x = -60\n",
+    "        away_team_position_x = 40\n",
+    "    \n",
+    "    \n",
+    "    plt.text(home_team_position_x, y_max, game_data['homeTeam']['abbrev'], fontsize=12, verticalalignment='bottom')\n",
+    "    plt.text(away_team_position_x, y_max, game_data['awayTeam']['abbrev'], fontsize=12, verticalalignment='bottom')\n",
+    "\n",
     "    plt.show()\n",
     "    \n",
     "    # on affiche les données brute de l'évenement\n",
-    "    pprint.pprint(event_data)  \n",
+    "    pprint.pprint(event_data)\n",
     "\n",
     "ipywidgets.interact(plot_nhl_data, game_type=['regular', 'playoff'], season=season_list)"
    ]
