--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -4,8 +4,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import SeasonData as sdata\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import SeasonData as sdata"
    ],
    "id": "8d67a944574fc258",
    "outputs": [],
@@ -157,7 +158,8 @@
     "    #  Determine if the event team is in advantage, disadvantage, or neutral situation\n",
     "    new_df['isGoalAdvantage'] = new_df.apply(\n",
     "        lambda x: \"Advantage\" if (int(x['situationCode'][1]) > int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
-    "                                 or (int(x['situationCode'][2]) > int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
+    "                                 or (int(x['situationCode'][2]) > int(x['situationCode'][1]) and x[\n",
+    "            'teamSide'] == 'home')\n",
     "        else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
     "                               or (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
     "        else 'Neutral'\n",
@@ -193,18 +195,23 @@
    "cell_type": "code",
    "source": [
     "# Test on all regular season\n",
-    "\"\"\"\n",
+    "\n",
+    "data_rs_clean = {}  # Store all clean data\n",
+    "\n",
     "#Loop on all years in regular season\n",
     "for year in data_rs:\n",
     "    current_year = data_rs[year]  #Get year\n",
     "    sdata_year = len(current_year)  #Get the number of games in the year\n",
+    "    data_rs_clean[year] = []  #Create year key to store all games\n",
     "\n",
     "    #Loop on all game in the year\n",
     "    for game in range(sdata_year):\n",
     "        current_year[game] = convert_event_to_dataframe(game_nhl=current_year[game])  #Processing game data\n",
-    "\"\"\""
+    "        data_rs_clean[year].append(current_year[game])  #Append the clean game data to the year key\n",
+    "\n",
+    "display(data_rs_clean[2022][0])  #Display the first game of 2022"
    ],
-   "id": "1e2d59058757870d",
+   "id": "a8a3a571e955b216",
    "outputs": [],
    "execution_count": null
   }
